2 eme draft design

--- a/index2.html
+++ b/index2.html
@@ -135,10 +135,10 @@
           
         </div> <!--#slide5-->
       </div>
-              <div class='footer'>
-          Immeuble d'exception
-        </div>
     </div>    
+</div>
+<div class='footer' style="display: none">
+  Immeuble d'exception
 </div>
 
 
