mieux code mieux

--- a/index3test.html
+++ b/index3test.html
@@ -60,7 +60,9 @@
 <section class='all'>
   
   <div class="page linbloc">
-    <div class='pagein'>aaa</div>
+    <div class='pagein'>
+    Home
+    </div>
     
   </div>
   <div class="page linbloc">
@@ -79,7 +81,7 @@
     <div class='pagein'>ffff</div>
   </div>
   <div class="page linbloc">
-    <div class='pagein'>ggg</div>
+    <div class='pagein'>aaa</div>
   </div>
   
   
@@ -112,7 +114,7 @@
  &copy; Copyright 2013 - Satprod Group
 </div> -->
  
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.min.js"></script>
 <!-- <script type="text/javascript" src="assets/scripts/jquery.parallax-1.1.3.js"></script> -->
 <script type="text/javascript" src="scripts/core.js"></script>
 </body>
