--- a/index3test.html
+++ b/index3test.html
@@ -47,7 +47,7 @@
   <div class="menu">
      <div id="header" class="header noir transition">
       <div class='menucentre'>
-        <span id="link_home">Home</span> | <span id="link0">About</span> | <span id="link1">Pictures</span> | <span id="link2">Interactive Visit</span> | <span id="link3">Services</span> | <span id="link4">Team</span> | <span id="link5">Contact</span>
+        <span id="link_home">Home</span> | <span id="link0">About</span> | <span id="link1">Pictures</span> | <span id="link2">3D Visit</span> | <span id="link3">Services</span> | <span id="link4">Team</span> | <span id="link5">Contact</span>
       </div>
     </div>
   </div>
@@ -61,18 +61,32 @@
   
   <div class="page linbloc">
     <div class='pagein'>
-    Home
+      <div>
+        <h2>Home</h2>
+      </div>
     </div>
     
   </div>
   <div class="page linbloc">
-    <div class='pagein'>bbb</div>
+    <div class='pagein'>
+      <div>
+        <h2>About</h2>
+      </div>      
+    </div>
   </div>
   <div class="page linbloc">
-    <div class='pagein'>ccc</div>
+    <div class='pagein'>
+      <div>
+        <h2>Pictures</h2>
+      </div>
+    </div>
   </div>
   <div class="page linbloc">
-    <div class='pagein'>dddd</div>
+    <div class='pagein'>
+      <div>
+        <h2>3D Visit</h2>
+      </div>
+    </div>
   </div>
   <div class="page linbloc">
     <div class='pagein'>eeee</div>
