design encore mieux

--- a/index3test.html
+++ b/index3test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="html">
+<html>
 <head>
 
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -57,7 +57,7 @@
 
 <!-- ----- LE SITE ENTIER EST ICI ------ -->
 
-<section class='all'>
+<div class='all'>
   
   <div class="page linbloc">
     <div class='pagein'>
@@ -113,7 +113,7 @@
 
 
 
-</section>
+</div>
 
 
 
