--- a/index3test.html
+++ b/index3test.html
@@ -69,7 +69,7 @@
   <div class="menu">
      <div id="header" class="header noir transition">
       <div class='menucentre'>
-        <span id="link_home">Home</span> . <span id="link0">Description</span> . <span id="link1">Pictures</span> . <span id="link2">3D Visit</span> . <span id="link3">Services</span> . <span id="link4">Team</span> . <span id="link5">Contact</span>
+        <span id="link_home">Descritpion</span> . <span id="link0">Inside</span> . <span id="link1">design</span> . <span id="link2">Tour</span> . <span id="link3">Services</span> . <span id="link4">Contact</span><!--  . <span id="link5">Contact</span> -->
       </div>
     </div>
   </div>
@@ -84,32 +84,32 @@
   <div class="page linbloc">
     <div class='pagein page1'>
       <div>
-        <h2>Home</h2>
+        <h2>Description</h2>
       </div>
       <p>zekycgqezkfgxq zqgixyqek,zyugntxqz kzeygnqkzeygntxzqek</p>
+      <div class='description1'>ada</div> 
     </div>
     
   </div>
   <div class="page linbloc">
-    <div class='pagein  page2'>
+    <div class='pagein page3'>
+      <div>
+        <h2>Inside</h2>
+      </div>
+    </div>
+  </div>
+  <div class="page linbloc">
+    <div class='pagein  page4'>
       <div class="logopage">
         dddd
       </div>
       <div>
-        <h2>Description</h2>
-      </div>
-      <div class='description1'>ada</div>      
+        <h2>Design</h2>
+      </div>     
     </div>
   </div>
   <div class="page linbloc">
-    <div class='pagein page3'>
-      <div>
-        <h2>Pictures</h2>
-      </div>
-    </div>
-  </div>
-  <div class="page linbloc">
-    <div class='pagein page4'>
+    <div class='pagein page5'>
       <div>
         <h2>3D Visit</h2>
       </div>
@@ -119,13 +119,7 @@
     <div class='pagein'>
       <div>
         <h2>Services</h2>
-      </div>
-    </div>
-  </div>
-  <div class="page linbloc">
-    <div class='pagein'>
-      <div>
-        <h2>Team</h2>
+        <p>mettre ici une copie de l'application avec a chaque fois une explication</p>
       </div>
     </div>
   </div>
@@ -180,7 +174,7 @@
 <div class='acceuilb footer noir' style="display: none">
 <div class='interligne'></div>
 <div class='ligneblanche'></div>
-  <p>THE BEST IN BRUSSELS</p>
+  <p>SATPROD AGENCY - Rue des Perdrix n°5 - email: sat@satprod.net - tel: 02.111.12.51</p>
 </div>
 
 
