--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li id='wellness_link'><span name="lbl" caption="menutour">Tour</span></li>
 			<li id='house_link'><span name="lbl" caption="menuappart">Appartements</span></li>
 			<li id='design_link'><span name="lbl" caption="menudesign">Design</span></li>
-			<li id='services_link'><span name="lbl" caption="menuservice">Services</span></li>
+			<li id='services_link'><span name="lbl" caption="menuservices">Services</span></li>
 			<li id='contact_link'><span name="lbl" caption="menucontact">Contact</span></li>
 			<li id='uk_link' class='lang'><img class="flaglang" src="img/lang/uk.png"></li>
 			<li id='fr_link' class='lang'><img class="flaglang" src="img/lang/fr.png"></li>
