--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<li id='design_link'><span name="lbl" caption="menudesign">Design</span></li>
 			<li id='services_link'><span name="lbl" caption="menuservices">Services</span></li>
 			<li id='contact_link'><span name="lbl" caption="menucontact">Contact</span></li>
-			<li id='uk_link' class='lang'><img class="flaglang" src="img/lang/uk.png"></li>
+			<li id='uk_link' class='lang'><img class="flaglang langactiv" src="img/lang/uk.png"></li>
 			<li id='fr_link' class='lang'><img class="flaglang" src="img/lang/fr.png"></li>
 			<li id='ru_link' class='lang'><img class="flaglang" src="img/lang/ru.png"></li>
 			<li id='chi_link' class='lang'><img class="flaglang" src="img/lang/chi.png"></li>
