Changement Photos + logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 		</div>
@@ -63,7 +63,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 
@@ -98,7 +98,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 		</div>
@@ -115,7 +115,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -184,7 +184,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -270,7 +270,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -303,7 +303,7 @@
 	<div class='colonegauche'>
 		<div class='logo-menu'>
 			<a class='logo1' href="http://www.puigredo.com">
-			<img alt="logo" style='opacity: 0.0001' src="img/logo-max-canpuigredo1.png"></img>
+				<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 			</a>
 		</div>
 	</div>
