--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/orbit.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="all">
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox-thumbs.css"/>
+<title>Royal Tervuren</title>
 </head>
 <body>
 
@@ -63,7 +64,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 
@@ -98,7 +99,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 		</div>
@@ -115,7 +116,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -184,7 +185,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -270,7 +271,7 @@
 		<div class='colonegauche'>
 			<div class='logo-menu'>
 				<a class='logo1' href="http://www.puigredo.com">
-					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
@@ -303,7 +304,7 @@
 	<div class='colonegauche'>
 		<div class='logo-menu'>
 			<a class='logo1' href="http://www.puigredo.com">
-				<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
+				<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 			</a>
 		</div>
 	</div>
