--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<a href="http://www.brussels-sothebysrealty.com">Powered by Sotheby's International Realty</a>
 </div>
 <div class="footb">
-	<a href="http:/satprod.net">Designed and developed by Satprod</a>
+	<a href="http://satprod.net">Designed and developed by Satprod</a>
 </div>
 <div class='all'>	
 	<nav class='menu'>
@@ -38,7 +38,7 @@
 	<div id='page1'>
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 0.8' src="img/logo.png"></img>
 				</a>
 			</div>
@@ -63,7 +63,7 @@
 	<div id='page2' style="display:none">
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
@@ -71,23 +71,9 @@
 		</div>
 		<div class="descr">
 			<span name="lbl" caption="txthistory">
-				<p><Strong>#1 Villa In Ibiza</Strong></p><p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of land.&nbsp;Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
-				A haven of peace with a&nbsp;fantastic landscape&nbsp;make you feel out of the world.</p><p><strong>Location :</strong></p><p>Halfway down to Cap Porroig in the south of Ibiza, and at less than five min. drive from San José town and Es Cubells.<br>
-				12 minutes from the international Airport. 5 minutes from the best beaches like Blue Marlin. 15 minutes from the port.</p><p><strong>More than 1700m2 of the construction:</strong></p><p>-12 double &nbsp;bedrooms (air-conditionned, WIFI, TV with over 500 channels, safety boxes)<br>
-				-4 double &nbsp;bedrooms<strong>&nbsp;</strong>for the staff a separate area( Air-conditionned, WIFI, TV salon,&nbsp; two Kitchen)<br>
-				-3 guest living rooms (TV with over 500 channels)<br>
-				-The house is fully&nbsp;equipped&nbsp;with domotic<br>
-				- possibility to land with an helicopter.<br>
-				- Lounge area (underfloor heating),Bar,Professional musical equipment 700 watt.<br>
-				- 3 kitchen ( 16 industrial refrigerator, 3 ice cube machine, full professional kitchen machines)<br>
-				- pool (heating and lightening)<br>
-				- tennis court (night lightening)<br>
-				- gym with an amazing view on the sea and Formentera island (equipped with the new generation machines from Technogym)<br>
-				- petanque court<br>
-				- parking up to 20 cars<br>
-				- Big park with more than 100 different types of plants.</p><p>Contemporary interior Decor by Philippe Starck, Ron Arad, Kartel, B&amp;B. Some important works of contemporary arts are present.</p><p><strong>Security.</strong></p><p>The property is surrounded by 1km of concrete wall and the building is alarmed.<br>
-				Bodyguards on request.
-				</p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum. Mauris accumsan orci elit, eu pretium purus accumsan et. Suspendisse ac varius lorem, id vulputate ipsum. Vestibulum ultricies rutrum elit sit amet dictum. Praesent congue lacinia posuere. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse ligula arcu, hendrerit id semper at, sodales sit amet felis. Ut in euismod lacus, vitae vulputate dolor. In dictum ut purus a egestas.
+
+				Aenean quis felis ac lectus ullamcorper ornare sit amet vel urna. Phasellus a lobortis orci. Nam sagittis justo vitae eleifend malesuada. Nunc urna enim, rutrum sed sapien ut, aliquet consequat quam. Nullam lobortis eros vel dolor rutrum, vel gravida est ullamcorper. Integer malesuada mauris sit amet blandit convallis. Integer sed blandit nisl, non cursus justo.
 			</span>
 		</div>
 
@@ -98,7 +84,7 @@
 	<div id='page3' style="display:none">
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
@@ -115,14 +101,13 @@
 	<div id="page4" style="display:none">
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
 				<span name="lbl" caption="txtappart">
-				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of land.&nbsp;Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
-				A haven of peace with a&nbsp;fantastic landscape&nbsp;make you feel out of the world.</p>
+				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
 				</span>
 			</div>
 		</div>
@@ -184,14 +169,13 @@
 	<div id="page5" style="display:none">
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
 				<span name="lbl" caption="txtdesign">
-				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of land.&nbsp;Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
-				A haven of peace with a&nbsp;fantastic landscape&nbsp;make you feel out of the world.</p>
+				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
 				</span>
 			</div>
 		</div>
@@ -270,30 +254,21 @@
 	<div id="page6" style="display:none">
 		<div class='colonegauche'>
 			<div class='logo-menu'>
-				<a class='logo1' href="http://www.puigredo.com">
+				<a class='logo1' href="http://www.royaltervuren.be">
 					<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 				</a>
 			</div>
 			<div class='textgauch'>
 				<span name="lbl" caption="txtservicespt">
-				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of land.&nbsp;Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
-				A haven of peace with a&nbsp;fantastic landscape&nbsp;make you feel out of the world.</p>
+				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
 				</span>
 			</div>
 		</div>
 		<div class="descr">
 			<span name="lbl" caption="txtservicesgd">
-				<p>- 2 gardeners<br>
-					- 2 housekeeper (more on request)<br>
-					- Secretary<br>
-					-Majordomo on request<br>
-					-bodyguards on request<br>
-					-michelin chef<br>
-					-waiters on request<br>
-					-massage and beauty procedure on request<br>
-					-tennis and sport coach on request.<br>
-					-car with a driver on request<br>
-					Puig Redo owned a yacht and on request we can organize your trip to Formentera etc.etc</p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum. Mauris accumsan orci elit, eu pretium purus accumsan et. Suspendisse ac varius lorem, id vulputate ipsum. Vestibulum ultricies rutrum elit sit amet dictum. Praesent congue lacinia posuere. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse ligula arcu, hendrerit id semper at, sodales sit amet felis. Ut in euismod lacus, vitae vulputate dolor. In dictum ut purus a egestas.
+
+				Aenean quis felis ac lectus ullamcorper ornare sit amet vel urna. Phasellus a lobortis orci. Nam sagittis justo vitae eleifend malesuada. Nunc urna enim, rutrum sed sapien ut, aliquet consequat quam. Nullam lobortis eros vel dolor rutrum, vel gravida est ullamcorper. Integer malesuada mauris sit amet blandit convallis. Integer sed blandit nisl, non cursus justo.
 			</span>
 		</div>
 	</div>
@@ -303,9 +278,14 @@
 	<div id="page7" style="display:none">
 	<div class='colonegauche'>
 		<div class='logo-menu'>
-			<a class='logo1' href="http://www.puigredo.com">
+			<a class='logo1' href="http://www.royaltervuren.be">
 				<img alt="logo" style='opacity: 1' src="img/logo.png"></img>
 			</a>
+		</div>
+		<div class='textgauch'>
+			<span name="lbl" caption="txtservicespt">
+			<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
+			</span>
 		</div>
 	</div>
 	<div class="descr">
