--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <div class="footb">
 	<a href="http://satprod.net">Designed and developed by Satprod</a>
 </div>
+<div class='brand'>
+	<img src="img/brand/a.jpg">
+	<img src="img/brand/b.jpg">
+	<img src="img/brand/c.jpg">
+	<img src="img/brand/d.jpg">
+</div>
 <div class='all'>	
 	<nav class='menu'>
 		<ul>
