ajout des textes et services

--- a/index.html
+++ b/index.html
@@ -77,8 +77,48 @@
 		</div>
 		<div class="descr">
 			<span name="lbl" caption="txthistory">
-				Etterbeek, à deux pas de Montgomery et du Parc du Cinquantenaire cet immeuble datant de 1910 prend place sur une des plus belles artères de Bruxelles, l’avenue de Tervuren.<br> 
-				L’immeuble a été rénové dans son intégralité en 2013 dans un esprit moderne tout en respectant et en conservant des éléments anciens qui font de cet immeuble une réalisation de goût et de caractère. 
+				<p>Ce bien est unique à Bruxelles à plus d'un titre .</p> 
+
+				<strong>Sa localisation :</strong> 
+
+				<p>Triple A , il est en effet situé dans la plus belle des avenues de Bruxelles , celle créée par le Roi Léopold II . 
+				Siège de nombreuses ambassades , elle abrite également le Palais Stoclet .
+				Le palais Stoclet est situé au 279 / 281 avenue de Tervueren à Bruxelles, dans la commune de Woluwe-Saint-Pierre. Il a été inscrit en juin 2009 par l'UNESCO sur la liste du patrimoine mondial de l'Humanité . 
+				De plus , le Royal Tervuren est situé à 2 pas des Institutions Européennes , la rue de la Loi étant la continuation de l'avenue de Tervueren et le rond point Robert Schuman . A 12 minutes de l'aéroport International de Bruxelles-Zaventem. 
+				A 100 m du métro , des lignes de tram et de bus , et à 500 m de l'accès aux autoroutes européennes via un tunnel.</p> 
+
+				<strong>Son Architecture et Son Design</strong>
+
+				<p>Rare immeuble Hausmanien sauvé de la destruction , premier immeuble construit avec des planchers en béton dès 1910 et achevé après la première guerre mondiale en 1918 .
+				Rare par la grandeur de sa façade se déroulant sur 3 avenues  et totalisant 83 m , laissant entrer généreusement la lumière dans tout le bâtiment. 
+				Les parties communes et la conciergerie sont l'oeuvre de YOO designed by Philippe STARCK.</p>
+
+				<strong>Ses Techniques :</strong>
+
+				<p>Rare par la qualité et le soin que les propriétaires ont apporté à la rénovation . Pour exemple , aucun câble ne vient défigurer la splendide façade. 
+				Rare par toutes les techniques modernes y apportées en mains endroits  tels que chauffage solaire et dans le sol , double flux , domotique , système cumulé de Téléphonie voice over IP , chaines de télévison mondiales via satellites , Internet haut débit constant de 100 Mo via fibre optique ( installé expressément pour l'immeuble)</p>  
+
+				<strong>Son Concept de Conciergerie et de Bien-être ( WELLNESS)</strong> 
+
+				<p>Le Concept de la conciergerie , outre son design particulièrement réussi , peut répondre aux plus hautes exigences et demandes de la clientèle mondiale  
+				Un centre de relaxation comprenant salle de Fitness, Spa-Jacuzzi, Sauna , Hamman , salle de massage est à la disposition des habitants. 
+				Une salle de conférence multi usage est également disponible sur demande.
+				Un parking AUTOMATIQUE de 22 places conservera les véhicules tel un coffre fort à température de 15 à 17 °C toute l'année. Seule une commande à distance fera le nécessaire pour garer la voiture elle-même. </p>
+
+
+				<p>Le plan Financier est basé sur des critères et des options de rentabilité très conservateurs. 
+				En effet , les rendements locatifs  sont ceux obtenus AVANT la période de cette dernière grande rénovation qui sera achevée au plus tard en Aôut 2014. 
+				De plus , une expertise bancaire ING valide les valeurs alors que la banque en a été le commanditaire. </p>
+
+				<p>Enfin , un Duplex - penthouse  de 500 M2  et de 480 M2 de terrasse jardin vient couronner cet objet d'exception . 
+				Ce jardin , oeuvre de l'architecte - paysagiste Palick van Hövell , est composé de 999 graminées et 1185 bulbes à fleurs blanches . Des chemins en teck d'Afrique sillonnent la promenade sur le toit , agrémenté d'un bassin de coquilles Saint Jacques bretonnes inspiré de l'architecte Tadao Ando.
+				La vue de ce jardin laisse apercevoir Bruxelles avec une vue panoramique sur les institutions Européennes , le Palais de Justice . Vue que l'on peut découvrir  en se laissant masser par les eaux d'un jacuzzi extérieur été comme hiver. </p>
+
+				<p>Le jardin est paru dans  l'ouvrage de Marie-Noëlle CRUYSMANS et Ivo PAUWELS , intitulé "Jardins d'inspiration en Belgique" et paru aux éditions RACINE .</p>
+
+				<p>Les bureaux sont occupés par 2 lobbyistes de très grande importance ( Biotechnologie et Packaging) depuis 1994 et 1995 et sont déterminés à y rester  pour de multiples raisons de localisation , de services et de prestige . </p>
+
+				<p>Durant 20 ans , le Turn Over des locataires résidentiels  a été de 5 à 6 ans de moyenne. Celui des commerces de 15 ans et celui des bureaux de 18 ans . Au bout de 20 ans , on est obligé si on veut conserver de telles performances , d'améliorer le bien via un lifting . Les bureaux ont également subi un lifting</p>  
 			</span>
 		</div>
 
@@ -183,7 +223,11 @@
 			</div>
 			<div class='textgauch'>
 				<span name="lbl" caption="txtdesign">
-				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
+				<p><Strong>Design interieur</Strong></p><p>Rare par la grandeur de sa façade se déroulant sur 3 avenues  et totalisant 83 m , laissant entrer généreusement la lumière dans tout le bâtiment. 
+				Les parties communes et la conciergerie sont l'oeuvre de <strong>YOO designed by Philippe STARCK.</strong></p>
+				<p>Les appartements du Royal Tervuren sont très lumineux et ont une finition exceptionelle.</p>
+				
+
 				</span>
 			</div>
 		</div>
@@ -268,15 +312,48 @@
 			</div>
 			<div class='textgauch'>
 				<span name="lbl" caption="txtservicespt">
-				<p><Strong>EXEMPLE DE TEXTE</Strong></p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum.</p>
+				<p><Strong>Services</Strong></p><p>Le Royal Tervuren dispose d'une conciergerie de jour et de nuit qui propose une multitude de services aux locataires.</p>
+				<p>En plus de services traditionnels, nous vous offront la possibilité d'avoir une conciergerie privée qui répondra à tous vos besoins. Où que vous soyez grâce à une application pour smartphone très sophistiquée.</p>
 				</span>
 			</div>
 		</div>
 		<div class="descr">
 			<span name="lbl" caption="txtservicesgd">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at auctor leo. Maecenas bibendum felis ut tristique ultricies. Nam vel risus velit. Donec ornare tellus sed eros varius varius. Nunc ullamcorper felis eu ullamcorper interdum. Mauris accumsan orci elit, eu pretium purus accumsan et. Suspendisse ac varius lorem, id vulputate ipsum. Vestibulum ultricies rutrum elit sit amet dictum. Praesent congue lacinia posuere. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse ligula arcu, hendrerit id semper at, sodales sit amet felis. Ut in euismod lacus, vitae vulputate dolor. In dictum ut purus a egestas.
+				
+				<strong>Conciergerie classique</strong><br>
+				<p>Aide et assistance à l'eménagement et au déménagement<br>
+				Réception de colis<br>
+				Distribution du courrier<br>
+				Travaux de blanchisserie et de repassage<br>
+				Travaux de couture<br>
+				Cordonnerie</p>
 
-				Aenean quis felis ac lectus ullamcorper ornare sit amet vel urna. Phasellus a lobortis orci. Nam sagittis justo vitae eleifend malesuada. Nunc urna enim, rutrum sed sapien ut, aliquet consequat quam. Nullam lobortis eros vel dolor rutrum, vel gravida est ullamcorper. Integer malesuada mauris sit amet blandit convallis. Integer sed blandit nisl, non cursus justo.
+				<strong>Entretien des appartements</strong>
+				<p>Nettoyage quotidien ou à la carte des appartements</p>
+
+
+				<strong>Homme à tout faire</strong>
+				<p>"Afin de conserver le caractère exceptionnel de luxe et de qualité qu'exige le Royal Tervuren ,
+				un homme à tout faire veillera en permanence  à l'entretien minutieux de tous les espaces de vie ainsi qu'à votre confort journalier en vous déchargeant de toutes tâches ancillaires."</p>
+
+				<p>Le homme à tout faire veillera à ce que l'immeuble et l'ensemble de ses installations soient en permanence en parfait état de fonctionnement
+				Exemple de tâches : changer des ampoules, retouches de peinture, gestion des poubelles, entretien des communs,…</p>
+
+				<strong>Private concierge (services externalisés)</strong>
+				<p>Organisation de dîner, de réception,…<br>
+				Organisation de voyage,…<br>
+				Réservation de restaurant, de ticket de théâtre,…<br>
+				Service de babysitting<br>
+				Renseignement sur les écoles<br>
+				Gestion des relations administratives<br>
+				Gestion de cave à vin<br>
+				Réservation de ticket d'avion<br>
+				Activité de secrétariat<br>
+				Prise en charge des animaux de compagnie<br>
+				Réservation de voiture<br>
+				Gestion de demandes ou d'achats spécifiques<br>
+				Courses personnelles,…</p>
+
 			</span>
 		</div>
 	</div>
