--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 	<a href="http://satprod.net">Designed and developed by Satprod</a>
 </div>
 <div class='brand'>
-	<img src="img/brand/a.jpg">
-	<img src="img/brand/b.jpg">
-	<img src="img/brand/c.jpg">
-	<img src="img/brand/d.jpg">
+	<a href="http://www.yoo.com/" target="_blank"><img class="yoo" src="img/brand/yoo1.png"></a>
+	<a href="http://www.boffi.com/" target="_blank"><img class="boffi" src="img/brand/boffi.png"></a>
+	<a href="http://www.gessi.it/" target="_blank"><img class="gessi" src="img/brand/gessi.jpg"></a>
+	<a href="http://www.aquamass.com/Home.aspx" target="_blank"><img class="aquam" src="img/brand/aquamass.gif"></a>
+	<a href="http://www.miele.co.uk/" target="_blank"><img class="miele opa" src="img/brand/miele.gif"></a>
+	<a href="http://www.liebherr.be/" target="_blank"><img class="lieber" src="img/brand/lieb.jpeg"></a>
+	<a href="http://www.technogym.com/be/" target="_blank"><img class="technogym" src="img/brand/techno.png"></a>
+	<a href="http://www.cisco.com/" target="_blank"><img class="cisco" src="img/brand/cisco.jpg"></a>	
 </div>
 <div class='all'>	
 	<nav class='menu'>
